--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     <li><a href="#"><i class="fa-solid fa-magnifying-glass" style="color: #ffffff;"></i></a></li>
                 </ul>
                 <!-- <i class="fa-solid fa-xmark" style="color: #f7f7f8;"></i> -->
-                <li  id="menu-btn" class="menu-bar"><a href="#"><i onclick="show()" class="fa-solid fa-bars" style="color: #ffffff;"></i></a></li>
+                <li  id="menu-btn" class="menu-bar"><a href="#"><i onclick="show(this)"  class="fa-solid fa-bars" style="color: #ffffff;"></i></a></li>
             </nav>
         </header>
 
